src/objects/MUSW__Recent_Item__c.object
<CustomObject>
    <description>Tracks User&apos;s most recently viewed items and Numbers</description>
    <fields>
        <fullName>MUSW__Label__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Record_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rec Id</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Style__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>eg Custom44 (Permit&apos;s Tab style)</inlineHelpText>
        <label>Style</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Tracking_Number__c</fullName>
        <description>external id not set, because we don&apos;t want to find it in searches</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Track No.</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Viewed_DateTime__c</fullName>
        <defaultValue>Now()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Viewed DateTime</label>
        <type>DateTime</type>
    </fields>
    <label>Recent Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recent Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>